--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,7 +67,7 @@ const howItWorksSteps = [
     imageCaption="Regina Sanchez, Helm EA since 2020"
   />
 
-  <section class="py-20 lg:py-24 bg-gray-50">
+  <section class="pt-8 pb-20 sm:pt-12 sm:pb-24 lg:pt-16 lg:pb-28 bg-gray-50">
     <div class="w-full px-4 sm:px-8 md:px-12 lg:px-16">
       <div class="text-center mb-12">
         <h2 class="text-brand-navy mb-8" style="font-size: 32px; font-weight: 500;">
