--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,7 +79,7 @@ const howItWorksSteps = [
     </div>
   </section>
 
-  <section class="py-12 sm:py-16 lg:py-20 bg-gray-50">
+  <section class="pt-8 pb-16 sm:pt-10 sm:pb-20 lg:pt-12 lg:pb-24 bg-gray-50">
     <div class="w-full px-4 sm:px-8 md:px-12 lg:px-16">
       <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-7 gap-4 sm:gap-6">
         {logos.map((logo) => (
