--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -106,7 +106,9 @@ const howItWorksSteps = [
         </h2>
       </div>
 
-      <SupportServicesGrid services={supportServices} />
+      <div class="w-full px-4 sm:px-8 md:px-12 lg:px-16">
+        <SupportServicesGrid services={supportServices} />
+      </div>
     </div>
   </section>
 
