--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -147,16 +147,18 @@ const howItWorksSteps = [
         </h2>
       </div>
 
-      <div class="max-w-4xl mx-auto mb-16">
-        <div class="relative w-full" style="padding-bottom: 56.25%;">
-          <iframe
-            class="absolute top-0 left-0 w-full h-full rounded-2xl shadow-2xl"
-            src="https://www.youtube.com/embed/xGWBAliMJLY"
-            title="How Helm Works"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-          ></iframe>
+      <div class="max-w-6xl mx-auto mb-16">
+        <div class="p-1 bg-white rounded-2xl shadow-2xl">
+          <div class="relative w-full" style="padding-bottom: 56.25%;">
+            <iframe
+              class="absolute top-0 left-0 w-full h-full rounded-xl"
+              src="https://www.youtube.com/embed/xGWBAliMJLY"
+              title="How Helm Works"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
         </div>
       </div>
 
