--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -294,6 +294,7 @@ const howItWorksSteps = [
 
   .cta-primary-btn:hover {
     background-color: #343A5A !important;
+    border-color: #343A5A !important;
     color: white !important;
   }
 
@@ -305,7 +306,7 @@ const howItWorksSteps = [
 
   .cta-secondary-btn:hover {
     background-color: var(--color-orange) !important;
-    border-color: black !important;
+    border-color: var(--color-orange) !important;
     color: white !important;
   }
 </style>
