--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -150,7 +150,7 @@ const howItWorksSteps = [
         </h2>
       </div>
 
-      <div class="max-w-7xl mx-auto mb-16 px-4">
+      <div class="max-w-[1400px] mx-auto mb-16 px-4">
         <div class="p-1.5 bg-white rounded-2xl shadow-[0_10px_40px_rgba(0,0,0,0.3)]">
           <div class="relative w-full" style="padding-bottom: 56.25%;">
             <iframe
