--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -222,7 +222,7 @@ const howItWorksSteps = [
     </div>
   </section>
 
-  <section class="relative w-full min-h-[600px] flex items-center" style="background-image: url('/images/sections-picture/image.png'); background-size: cover; background-position: center;">
+  <section class="relative w-full min-h-[600px] flex items-center" style="background-image: url('/images/sections-picture/helm-ceo-CEO-Aerofarms-testimonial-1.jpg'); background-size: cover; background-position: center;">
     <div class="absolute inset-0 bg-black opacity-30"></div>
     <div class="relative w-full px-4 sm:px-8 md:px-12 lg:px-16 py-20">
       <div class="max-w-7xl mx-auto flex justify-end">
