--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import Hero from '../components/Hero.astro';
 import ServiceCard from '../components/ServiceCard.astro';
 import SupportServicesGrid from '../components/SupportServicesGrid.astro';
 import TestimonialCarousel from '../components/TestimonialCarousel.jsx';
+import VideoTestimonials from '../components/VideoTestimonials.jsx';
 import FAQAccordion from '../components/FAQAccordion.jsx';
 import Button from '../components/Button.astro';
 import services from '../data/services.json';
 import supportServices from '../data/support-services.json';
 import testimonials from '../data/testimonials.json';
+import videoTestimonials from '../data/video-testimonials.json';
 import logos from '../data/logos.json';
 
 const heroImage = '/images/people/regina-sanchez.jpg';
@@ -248,6 +250,8 @@ const howItWorksSteps = [
       </div>
     </div>
   </section>
+
+  <VideoTestimonials testimonials={videoTestimonials} client:load />
 
   <section class="py-20 bg-gray-50">
     <div class="w-full px-8 sm:px-12 lg:px-16">
