--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -228,7 +228,7 @@ const howItWorksSteps = [
     <div class="absolute inset-0 bg-gradient-to-t from-black/40 via-transparent to-transparent"></div>
     <div class="relative w-full px-4 sm:px-8 md:px-12 lg:px-16 py-12 pb-16">
       <div class="max-w-7xl mx-auto">
-        <div class="flex justify-center">
+        <div class="flex justify-end pr-12">
           <div class="max-w-2xl">
             <div class="px-10 py-6 mb-0 relative overflow-hidden">
               <div class="absolute inset-0 bg-gradient-to-r from-[#AF6022]/90 via-[#AF6022]/70 to-transparent"></div>
