--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -223,7 +223,7 @@ const {
 
   .hero-secondary-btn {
     background-color: white;
-    border-color: #343A5A !important;
+    border-color: #40496D !important;
     color: #343A5A !important;
   }
 
