--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -22,7 +22,7 @@ const baseClasses = 'inline-flex items-center justify-center font-semibold round
 const variantClasses = {
   primary: 'bg-brand-orange text-white hover:bg-brand-orangeDark',
   secondary: 'bg-brand-navy text-white hover:bg-brand-navyDark',
-  outline: 'border-2 text-brand-orange hover:bg-brand-orange hover:text-white'
+  outline: 'border-2 border-brand-orange text-brand-orange hover:bg-brand-orange hover:text-white'
 };
 
 const sizeClasses = {
