--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -223,14 +223,14 @@ const {
 
   .hero-secondary-btn {
     background-color: white;
-    border-color: #40496D !important;
+    border: 2px solid #40496D !important;
     color: #343A5A !important;
   }
 
   .hero-secondary-btn:hover,
   .hero-secondary-btn:active {
     background-color: var(--color-orange);
-    border-color: var(--color-orange);
+    border: 2px solid var(--color-orange) !important;
     color: white;
   }
 
