--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 const currentPath = Astro.url.pathname;
 
 const navItems = [
-  { label: 'STAFFING', href: '/services' },
+  { label: 'STAFFING', href: '/staffing' },
   { label: 'COACHING', href: '/coaching' },
   { label: 'RESOURCES', href: '/blog' }
 ];
